<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/nombre"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtApePa"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/paterno"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtApeMa"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/materno"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:text="@string/email"
        android:background="@drawable/table_content_cell_bg"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/celular"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/celular"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fechaNac"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/nacimiento"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/ubica"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/ubica"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/registro"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:text="@string/registro"
        android:textSize="15sp" />

</LinearLayout>